# vmm-akaros

./: .gitignore  Makefile  README.md  groups  project.config  vmm.c
include/: bootparam.h  vmm.h
lib/: vmxmsr.c
xhype/simpletests/: Makefile  README.md  test_num_space.cpp  test_num_vcpus.cpp  test_two_mmap.c  test_two_mmap_space.c  test_two_vms_in_main_thread.c  test_two_vms_in_two_processes.c  test_two_vms_in_two_threads.c  utils.c  utils.h
xhype/vthread-rs/: Cargo.toml  build.rs  cdef2rust.py
xhype/vthread-rs/c_src/: biostables.c  cpuid.c  hlt.s
xhype/vthread-rs/src/: README.md  consts.rs  cpuid.rs  err.rs  lib.rs  loader.rs  mach.rs  (+6 more)
xhype/vthread_64bit/: Makefile  change.c  change.h  identity_map.cpp  identity_map.h  longmode.asm  main.c  paging.h  utils.c  utils.h  vmcs.h  vmexit_qual.h  vthread.c  vthread.h  vthread_hlt.S  vthread_hlt.h  x86.h
xhype/vthread_osx/: Makefile  README.md  main.c  utils.c  utils.h  vthread.c  vthread.h
xhype/xhype/: Cargo.toml  README.md  build.rs  cstruct2rust.py  readme.md
xhype/xhype/c_src/: cpuid.c  hlt.s  serial_c.c  utils.c  vmcall.c  vmnet.m
xhype/xhype/examples/: firmware_test.rs  xhype_firmware.rs  xhype_harvey.rs  xhype_linux.rs
xhype/xhype/src/: apic.rs  bios.rs  cpuid.rs  decode.rs  err.rs  ioapic.rs  lib.rs  linux.rs  loader.rs  mach.rs  main.rs  multiboot.rs  pci.rs  rtc.rs  serial.rs  utils.rs  virtio.rs  vmexit.rs  vthread.rs  x86.rs
xhype/xhype/src/consts/: mod.rs  msr.rs  x86.rs
xhype/xhype/src/hv/: ffi.rs  mod.rs  vmx.rs
xhype/xhype/src/virtio/: mmio.rs  mod.rs  net.rs  rng.rs  virtq.rs
(+2 files in other folders)
