# SPDX-License-Identifier: GPL-2.0-only

[package]
name = "xhype"
version = "0.1.0"
edition = "2018"


build = "build.rs"

[dependencies]
log = "0.4"
bitfield = "0.13.2"
chrono = "0.4"
rand = "0.7.3"
crossbeam-channel = "0.4.3"
libc = "0.2.74"

[dev-dependencies]
flexi_logger = "0.15.10"

[[example]]
name = "xhype_linux"


[build-dependencies]
cc = "1.0.46"